--- a/sgaur.html
+++ b/sgaur.html
@@ -4,40 +4,48 @@
    <head>
 <meta name="description" content="create space of Shriyansh Gaur>
 <meta charset="utf-8">
-<title> SHRIYANSH GAUR'S-webspace </title>
-   </head>
+<title > SHRIYANSH GAUR'S-webspace </title>
 
 
-   <body>
-<table cellspacing="25">
+<link rel="stylesheet" href="style.css">
+<link rel="icon" href="favicon(1).ico">
+
+
+</head>
+
+
+   <body style="background-color: #EAF6F6">
+<table class="centertable" cellspacing="25">
 <tr>
-<td><img src="mypic.jpeg" width="200" alt="Shriyansh gaur  N.I.T. RAIPUR"></td>
-<td> <h1>Shriyansh Gaur </h1>
-<h3>1st year U.G. student at <a href="http://www.nitrr.ac.in ">N.I.T. RAIPUR</a></h3></td>
+<td><img class="c  cirpic" src="mypic.jpeg" width="200" alt="Shriyansh gaur  N.I.T. RAIPUR"></td>
+<td> <h1 class="a">Shriyansh Gaur </h1>
+<h3 class="a">1st year U.G. student at <a href="http://www.nitrr.ac.in ">N.I.T. RAIPUR</a></h3></td>
 
 
 </tr>
 </table>
 <hr size="4" noshade>
 
-<p> Writer of the awestrucking BOOK<em> <strong><a href="https://www.amazon.in/Lets-make-ASYMPTOTE-TOWARDS-LIFE-ebook/dp/B08WPGXDZF/ref=sr_1_1?dchild=1&keywords=shriyansh+gaur&qid=1618766903&sr=8-1"> " Lets make an asymptote towards life " </a> </strong> </em></p>
-<ul>
+<p class="a"> Writer of the awestrucking BOOK<em> <strong><a href="https://www.amazon.in/Lets-make-ASYMPTOTE-TOWARDS-LIFE-ebook/dp/B08WPGXDZF/ref=sr_1_1?dchild=1&keywords=shriyansh+gaur&qid=1618766903&sr=8-1"> " Lets make an asymptote towards life " </a> </strong> </em></p>
+<p class="a"> Maker of the wonderful SONG <em> <strong><a href="https://youtu.be/Oi156vfOKaM "> " You Are Incredible" </a> </strong> </em></p>
+
+<ul class="a">
  <li>Makes music </li> 
  <li>Write songs </li>
  <li>Sing them </li>
 </ul>
-<p>Alumini of  <a href="https://www.sjcallahabad.org"> St.Joseph's College Allahabad </a></p>
-<p> Seen something awesome going around you ,....well look again you'll find me there.</p>
-<h2> Mr.Phenomenal </h2>
+<p class="a" >Alumini of  <a href="https://www.sjcallahabad.org"> St.Joseph's College Allahabad </a></p>
+<p  class="a"> Seen something awesome going around you ,....well look again you'll find me there.</p>
+<h2  class="a"> Mr.Phenomenal </h2>
 <hr size="5" noshade> 
+<p class="a"> <em> <strong>SKILLS</strong> </em></p>
 
-<table border="5">
+<table class="centertable"        border="5">
 <thead>
-<tr><em> <strong>SKILLS</strong> </em></tr>
 </thead>
 <tbody>
  
-<tr><td>Java </td><td>*****</td>
+<tr><td>Java </td><td>****</td>
 </tr>
 
 <tr><td> C++  </td><td>**** </td>
@@ -48,9 +56,11 @@
 </tr>
 <tr><td>Video Animations </td><td>**** </td>
 </tr>
+<tr><td> Singing </td><td>***** </td>
+</tr>
 <tr><td>Graphic Designing </td><td>*** </td>
 </tr>
-<tr><td> Use D.A.W.s for making songs </td><td>*** </td>
+<tr><td> D.A.W.s for making songs </td><td>*** </td>
 </tr>
 <tr><td>Creative Writing</td><td>***** </td>
 </tr>
@@ -59,7 +69,7 @@
 </table>
 <hr size="5" noshade> 
 
-<table border="4">
+<table  class="centertable"   border="4">
 <tr><td> Language I Speak  -></td> 
 <td>English</td>
 
@@ -69,11 +79,11 @@
 
 </table>
 <hr size="5" noshade> 
-<h3> Contacts</h3>
+<h3  > Contacts</h3>
 
 
 <form action="mailto:ashuji478@gmail.com" method="post"  enctype"text/plain"> 
-<table>
+<table  >
 <tr>
 <td><label> Your Name </label></td>
 <td><input type="text" name="name"></td>
@@ -90,12 +100,12 @@
 
 </tr>
 </table>
-<input type="submit">
+<input class="a" type="submit">
 
 
 
 </form>
-<p><a href="www.facebook.com/shriyanshgaur"> My Facebook page </a></p>
+<p class="a"><a href="www.facebook.com/shriyanshgaur"> My Facebook page </a></p>
 
 
 
